--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -266,6 +266,7 @@ deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:6b40:2000:15d9::1;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
