Update lists at 20250113-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -65,6 +65,7 @@ allow 107.189.31.33;
 allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
+allow 107.189.5.239;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.6.36;
@@ -541,7 +542,6 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
-allow 185.91.126.90;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -862,6 +862,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -887,7 +888,6 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -1035,7 +1035,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1053,6 +1052,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1556,6 +1556,7 @@ allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.101.107.151;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1666,7 +1667,6 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
