Update lists at 20250113-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -129,6 +129,7 @@ allow 146.19.143.47;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 146.70.146.26;
+allow 146.70.164.213;
 allow 147.45.116.145;
 allow 147.45.78.34;
 allow 149.202.79.101;
@@ -194,6 +195,7 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -280,6 +282,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -518,7 +521,6 @@ allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
-allow 185.35.202.222;
 allow 185.38.175.133;
 allow 185.39.207.83;
 allow 185.40.4.100;
@@ -888,6 +890,7 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -1064,7 +1067,6 @@ allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
-allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
@@ -1165,6 +1167,7 @@ allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1706,8 +1709,6 @@ allow 92.246.138.145;
 allow 92.246.84.133;
 allow 92.33.155.77;
 allow 93.113.25.147;
-allow 93.113.25.189;
-allow 93.113.25.251;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.125;
