--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -129,6 +129,7 @@ deny 146.19.143.47;
 deny 146.59.126.232;
 deny 146.59.231.4;
 deny 146.70.146.26;
+deny 146.70.164.213;
 deny 147.45.116.145;
 deny 147.45.78.34;
 deny 149.202.79.101;
@@ -194,6 +195,7 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -280,6 +282,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.183.157.214;
@@ -518,7 +521,6 @@ deny 185.247.184.33;
 deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.34.33.2;
-deny 185.35.202.222;
 deny 185.38.175.133;
 deny 185.39.207.83;
 deny 185.40.4.100;
@@ -888,6 +890,7 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
+deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
@@ -1064,7 +1067,6 @@ deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
-deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
@@ -1165,6 +1167,7 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1706,8 +1709,6 @@ deny 92.246.138.145;
 deny 92.246.84.133;
 deny 92.33.155.77;
 deny 93.113.25.147;
-deny 93.113.25.189;
-deny 93.113.25.251;
 deny 93.123.12.112;
 deny 93.185.165.211;
 deny 93.95.228.125;
