--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -282,7 +282,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -304,6 +303,7 @@ allow 185.195.71.8;
 allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.208.158.200;
 allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
@@ -541,6 +541,7 @@ allow 185.40.4.95;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
+allow 185.59.100.196;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -839,6 +840,7 @@ allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
+allow 212.95.54.77;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -863,9 +865,7 @@ allow 23.137.254.217;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
-allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1038,6 +1038,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1060,7 +1061,6 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6b40:2000:15d9::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1363,6 +1363,7 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:5f9b::1;
+allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
@@ -1544,6 +1545,7 @@ allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.21.193;
+allow 45.84.107.101;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1579,7 +1581,6 @@ allow 5.196.95.34;
 allow 5.255.100.206;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.131;
 allow 5.255.102.89;
 allow 5.255.103.235;
@@ -1642,7 +1643,6 @@ allow 77.37.3.7;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 79.132.143.85;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1670,6 +1670,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
