--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -103,6 +103,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:9b1:c300:3043::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
 allow 2001:b030:2422::7234;
@@ -257,6 +258,7 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:5e0:36:c311::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
