--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -65,7 +65,6 @@ allow 107.189.31.33;
 allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
-allow 107.189.5.239;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.6.36;
@@ -121,6 +120,7 @@ allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
 allow 142.44.234.69;
+allow 144.172.118.161;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.73;
@@ -129,7 +129,6 @@ allow 146.19.143.47;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 146.70.146.26;
-allow 146.70.164.213;
 allow 147.45.116.145;
 allow 147.45.78.34;
 allow 149.202.79.101;
@@ -151,7 +150,6 @@ allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.192.19;
 allow 154.26.159.157;
-allow 155.4.219.14;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -283,7 +281,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -291,6 +288,7 @@ allow 185.183.159.40;
 allow 185.191.204.254;
 allow 185.193.158.134;
 allow 185.193.52.180;
+allow 185.195.236.55;
 allow 185.195.71.10;
 allow 185.195.71.11;
 allow 185.195.71.12;
@@ -349,7 +347,6 @@ allow 185.220.101.135;
 allow 185.220.101.136;
 allow 185.220.101.137;
 allow 185.220.101.138;
-allow 185.220.101.139;
 allow 185.220.101.14;
 allow 185.220.101.140;
 allow 185.220.101.141;
@@ -543,7 +540,6 @@ allow 185.40.4.95;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
-allow 185.59.100.196;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -798,7 +794,6 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:9b1:c300:3043::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
 allow 2001:b030:2422::7234;
@@ -831,19 +826,18 @@ allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
-allow 209.141.48.50;
 allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.60.219;
+allow 209.141.61.52;
 allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
-allow 212.95.54.77;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -1170,6 +1164,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
@@ -1202,7 +1197,6 @@ allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
-allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::140;
 allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
@@ -1368,7 +1362,6 @@ allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:5f9b::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1388,8 +1381,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
-allow 2a0e:97c0:3ea:533::1;
-allow 2a0e:97c0:3ea:537::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
@@ -1495,8 +1486,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.70.101;
-allow 45.137.70.106;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1550,7 +1539,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.182;
 allow 45.84.107.198;
@@ -1575,6 +1563,7 @@ allow 47.76.187.86;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
+allow 51.222.12.40;
 allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.38.225.46;
@@ -1714,9 +1703,6 @@ allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 92.33.155.77;
-allow 93.113.25.147;
-allow 93.113.25.189;
-allow 93.113.25.251;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.125;
