Update lists at 20250114-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,6 +150,8 @@ allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.192.19;
 allow 154.26.159.157;
+allow 154.56.100.33;
+allow 157.20.52.195;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -192,7 +194,6 @@ allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.237.206.68;
-allow 173.249.57.253;
 allow 173.255.198.243;
 allow 173.44.141.34;
 allow 176.118.193.33;
@@ -280,7 +281,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -889,7 +889,9 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.94.211.25;
@@ -916,6 +918,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:10:dbf5:1:1:fa9:a55;
@@ -1057,12 +1060,10 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6b40:2000:15d9::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
-allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1536,6 +1537,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.182;
 allow 45.84.107.198;
@@ -1636,7 +1638,6 @@ allow 77.37.3.7;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 79.132.143.85;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
