Update lists at 20250114-1501

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -252,6 +252,7 @@ deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:1dc0:caff:a4::b8c4;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
@@ -271,6 +272,7 @@ deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
+deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
