--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -104,7 +104,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -286,7 +285,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -804,7 +802,6 @@ set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -870,9 +867,11 @@ set_real_ip_from 23.137.254.217;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
+set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
+set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
 set_real_ip_from 23.154.177.18;
@@ -1068,6 +1067,7 @@ set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:6b40:2000:15d9::1;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1086,7 +1086,6 @@ set_real_ip_from 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 set_real_ip_from 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 set_real_ip_from 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
-set_real_ip_from 2a03:4000:28:1e8::69;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1548,6 +1547,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
@@ -1650,6 +1650,7 @@ set_real_ip_from 77.37.3.7;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
+set_real_ip_from 79.132.143.85;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
