Update lists at 20250116-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -233,7 +233,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:5501:3000:a97::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -595,6 +594,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:8e09::1;
+allow 2a0f:ca80:1337::c6d6:b183;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
