--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -103,6 +103,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
@@ -792,6 +793,7 @@ set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b0:258:c600::1000;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1407,6 +1409,7 @@ set_real_ip_from 2a0f:e586:f:f:fca1:db52:9055:cff3;
 set_real_ip_from 2a10:1fc0:1::c758:3168;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:1:1:194:26:192:142;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
@@ -1570,6 +1573,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.206;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.102.89;
 set_real_ip_from 5.255.103.235;
@@ -1692,6 +1696,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
+set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.223.2.52;
@@ -1714,7 +1719,6 @@ set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.159.104.166;
-set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.236;
