--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -104,6 +104,7 @@ set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b0:258:c600::1000;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -618,6 +619,7 @@ set_real_ip_from 2a0f:e586:f:f:fca1:db52:9055:cff3;
 set_real_ip_from 2a10:1fc0:1::c758:3168;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:1:1:194:26:192:142;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
