--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -30,7 +30,6 @@ allow 104.244.78.162;
 allow 104.244.78.232;
 allow 104.244.78.233;
 allow 104.244.79.44;
-allow 104.244.79.50;
 allow 104.244.79.61;
 allow 107.172.31.218;
 allow 107.174.138.172;
@@ -56,7 +55,6 @@ allow 107.189.1.9;
 allow 107.189.2.108;
 allow 107.189.29.103;
 allow 107.189.29.184;
-allow 107.189.30.236;
 allow 107.189.30.49;
 allow 107.189.30.69;
 allow 107.189.30.86;
@@ -103,7 +101,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -188,7 +185,6 @@ allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.105.174.195;
 allow 172.233.82.41;
-allow 172.234.123.178;
 allow 172.234.228.174;
 allow 172.81.131.110;
 allow 172.81.131.139;
@@ -279,14 +275,12 @@ allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
-allow 185.132.53.47;
 allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -795,7 +789,6 @@ allow 2001:910:1400:107::2;
 allow 2001:9b0:258:c600::1000;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -820,7 +813,6 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
-allow 206.166.251.208;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -975,7 +967,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
@@ -1000,7 +991,6 @@ allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
-allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
@@ -1124,7 +1114,6 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1412,6 +1401,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
+allow 2a10:1fc0:11:0:216:3cff:fe3b:b013;
 allow 2a10:1fc0:1::c758:3168;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1522,6 +1512,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.143.166.136;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.26;
@@ -1542,7 +1533,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.182;
 allow 45.84.107.198;
@@ -1599,7 +1589,6 @@ allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.124.134;
 allow 5.255.125.196;
-allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
@@ -1619,7 +1608,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.171.137.169;
 allow 62.182.84.146;
