--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -859,7 +859,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1412,6 +1411,7 @@ allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:11:0:216:3cff:fe3b:b013;
 allow 2a10:1fc0:1::c758:3168;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:142;
@@ -1638,7 +1638,6 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 79.132.143.85;
-allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
@@ -1695,6 +1694,7 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
+allow 91.219.236.101;
 allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
