--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -859,7 +859,6 @@ deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
-deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
@@ -1412,6 +1411,7 @@ deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:1fc0:11:0:216:3cff:fe3b:b013;
 deny 2a10:1fc0:1::c758:3168;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:142;
@@ -1638,7 +1638,6 @@ deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
 deny 79.132.143.85;
-deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
 deny 80.82.78.14;
@@ -1695,6 +1694,7 @@ deny 91.208.75.178;
 deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
+deny 91.219.236.101;
 deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
