Update lists at 20250118-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1078,6 +1078,7 @@ allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1123,6 +1124,7 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b87:500::3;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1525,7 +1527,6 @@ allow 45.143.166.136;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.26;
-allow 45.200.148.34;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1579,6 +1580,7 @@ allow 5.196.95.34;
 allow 5.255.100.206;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.131;
 allow 5.255.102.89;
 allow 5.255.103.235;
@@ -1619,6 +1621,7 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.79.66.19;
+allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.190.76.2;
@@ -1654,6 +1657,7 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
@@ -1720,6 +1724,7 @@ allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.159.104.166;
+allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.121.91;
 allow 94.177.106.236;
