--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1078,6 +1078,7 @@ deny 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 deny 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+deny 2a03:4000:28:1e8::69;
 deny 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1123,6 +1124,7 @@ deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:129:2098::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:9b87:500::3;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1525,7 +1527,6 @@ deny 45.143.166.136;
 deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.154.98.26;
-deny 45.200.148.34;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1579,6 +1580,7 @@ deny 5.196.95.34;
 deny 5.255.100.206;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.131;
 deny 5.255.102.89;
 deny 5.255.103.235;
@@ -1619,6 +1621,7 @@ deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
 deny 5.79.66.19;
+deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.84.146;
 deny 64.190.76.2;
@@ -1654,6 +1657,7 @@ deny 82.221.131.5;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.239.46.144;
 deny 84.247.165.51;
@@ -1720,6 +1724,7 @@ deny 94.102.51.15;
 deny 94.142.241.194;
 deny 94.142.244.16;
 deny 94.159.104.166;
+deny 94.16.115.121;
 deny 94.16.116.81;
 deny 94.16.121.91;
 deny 94.177.106.236;
