--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1078,6 +1078,7 @@ set_real_ip_from 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 set_real_ip_from 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 set_real_ip_from 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+set_real_ip_from 2a03:4000:28:1e8::69;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1123,6 +1124,7 @@ set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:129:2098::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9b87:500::3;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1525,7 +1527,6 @@ set_real_ip_from 45.143.166.136;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.154.98.26;
-set_real_ip_from 45.200.148.34;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
@@ -1579,6 +1580,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.206;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.102.89;
 set_real_ip_from 5.255.103.235;
@@ -1619,6 +1621,7 @@ set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 5.79.66.19;
+set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.2;
@@ -1654,6 +1657,7 @@ set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
@@ -1720,6 +1724,7 @@ set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.159.104.166;
+set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.236;
