--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -102,6 +102,7 @@ allow 2001:67c:e28:1::3;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b0:258:c600::1000;
+allow 2001:9b1:c300:3043::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
 allow 2001:b030:2422::7234;
@@ -268,7 +269,6 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6b40:2000:15d9::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
