--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -206,7 +206,6 @@ allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
-allow 178.175.134.93;
 allow 178.175.148.209;
 allow 178.175.148.246;
 allow 178.20.55.16;
@@ -877,8 +876,10 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
+allow 23.236.122.151;
 allow 23.236.122.193;
 allow 23.94.211.25;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -906,6 +907,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -1507,7 +1509,6 @@ allow 45.143.166.136;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.26;
-allow 45.200.148.34;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
