--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -128,6 +128,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
