Update lists at 20250119-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -86,7 +86,6 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.120.157.137;
 allow 109.169.33.163;
-allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -782,7 +781,6 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:9b0:258:c600::1000;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
 allow 2001:b030:2422::7234;
@@ -848,7 +846,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1349,7 +1346,10 @@ allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
+allow 2a0d:bbc7:0:1::328;
+allow 2a0d:bbc7:0:1::36c;
 allow 2a0d:bbc7:0:1::394;
+allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1524,9 +1524,13 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.182;
 allow 45.84.107.198;
+allow 45.84.107.222;
+allow 45.84.107.55;
+allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.94.31.68;
 allow 45.95.169.130;
@@ -1558,7 +1562,6 @@ allow 5.196.95.34;
 allow 5.255.100.206;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.102.89;
 allow 5.255.103.235;
 allow 5.255.104.202;
