--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -101,7 +101,6 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:9b0:258:c600::1000;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
 allow 2001:b030:2422::7234;
@@ -569,7 +568,10 @@ allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
+allow 2a0d:bbc7:0:1::328;
+allow 2a0d:bbc7:0:1::36c;
 allow 2a0d:bbc7:0:1::394;
+allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
