--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -86,7 +86,6 @@ deny 108.181.69.243;
 deny 108.61.189.136;
 deny 109.120.157.137;
 deny 109.169.33.163;
-deny 109.228.160.26;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -782,7 +781,6 @@ deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:9b0:258:c600::1000;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:9e54::b;
 deny 2001:b030:2422::7234;
@@ -848,7 +846,6 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
-deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -1349,7 +1346,10 @@ deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
+deny 2a0d:bbc7:0:1::328;
+deny 2a0d:bbc7:0:1::36c;
 deny 2a0d:bbc7:0:1::394;
+deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1524,9 +1524,13 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.182;
 deny 45.84.107.198;
+deny 45.84.107.222;
+deny 45.84.107.55;
+deny 45.84.107.74;
 deny 45.84.107.76;
 deny 45.94.31.68;
 deny 45.95.169.130;
@@ -1558,7 +1562,6 @@ deny 5.196.95.34;
 deny 5.255.100.206;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.102.89;
 deny 5.255.103.235;
 deny 5.255.104.202;
